--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project>
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <LangVersion>14.0</LangVersion>
 
@@ -9,10 +8,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
 
     <AnalysisLevel>latest</AnalysisLevel>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\mp4Parser\mp4Parser.csproj" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
 
 </Project>
